# MyCad

./: .gitignore  CMakeLists.txt  README.md  build.bat  run.bat  提示词.txt
include/: Document.h  EncodingHelper.h  FileIO.h  MainWindow.h  Modeling.h  ParameterDialog.h  SelectionManager.h  TransformManager.h  View3D.h
resources/: resources.qrc
src/: Document.cpp  FileIO.cpp  MainWindow.cpp  Modeling.cpp  ParameterDialog.cpp  SelectionManager.cpp  TransformManager.cpp  View3D.cpp  main.cpp
